<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_persona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/img_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/persona" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="277dp"
        android:layout_height="39dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/txt_introduzca_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_persona"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_introduce_la_clave"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:autofillHints="" />

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="entrar"
        android:text="@string/txt_bt_entrar"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/txt_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registrarse"
        android:text="@string/registrarse"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/bt_entrar" />
</androidx.constraintlayout.widget.ConstraintLayout>